Fix: spacing

--- a/component-library/components/left-right/left-right.scss
+++ b/component-library/components/left-right/left-right.scss
@@ -15,7 +15,7 @@
     padding-block: 24px;
     padding-inline: 32px;
   }
-  .left-right__wrapper picture, .left-right__wrapper img {
+  .left-right__wrapper picture {
     width: 100%;
     max-width: 500px;
     display: inline-flex;
@@ -34,12 +34,14 @@
     }
   }
 
-  .left-right__wrapper picture, .left-right__wrapper img {
+  .left-right__wrapper picture {
     margin-top: 32px;
   }
 
-  h2 {
+  &__text {
     max-width: 620px;
-    margin-block: 30px;
+    h2 {
+      margin-block: 30px;
+    }
   }
 }
